JG-2006-12-15-1: Bugfix:    system_tests/clients/common/setup failed on SGE 6.0.

JG-2006-12-15-0: Enhancem.: Added check system_tests/clients/common/setup 
                            testing behaviour of clients
                            - when there is no bootstrap file
                            - when there is no act_qmaster file
                            - when qmaster is down
                 Review:    AA


RH-2006-12-14-0: Enhancem.: Initial version of hedeby checktree added

JG-2006-12-13-0: Enhancem.: Added script to find deprecated globals / procedure 
                            calls.
                 Cleanup:   Removed deprecated globals from dtrace test.
                 Review:    RD

HP-2006-12-13-0: Bugfix:    Added needs for test from checkin HP-2006-12-12-0

RD-2006-12-12-0: Bugfix:    Fixed qquota test
                 Review:    JG

HP-2006-12-12-0: Enhancem.: Added test for SGE_Helper_Sevice
                 Review:    JG

JG-2006-12-12-0: Cleanup:   Removed globals and set_error from all remaining files.

JG-2006-12-11-0: Cleanup:   Removed globals and set_error from performance checks and
                            system_tests/clients.

AH-2006-12-11-0: Enhancem.: New test to ensure Dtrace monitor works on 
                            S10 machines
                 Review:    RD

AA-2006-12-08-0: Cleanup:   arco_checktree fixes

JG-2006-12-08-0: Cleanup:   Removed globals and set_error from functional checks.

JG-2006-12-07-1: Bugfix:    Fixed error handling for setup/cleanup functions.
                            Compile timeout was too low for jgdi build.
                 Cleanup:   Removed globals and set_error from bugs/issuezilla
                            checks.

JG-2006-12-07-0: Bugfix:    Fixed a TCL error introduced by JG-2006-12-06-0.
                            Fixed installation of SGE 6.0, 6.0u1, 6.0u2, ...
                 Review:    RD

AA-2006-12-07-0: Cleanup:   arco jtestcase removal
